[gd_scene load_steps=4 format=3 uid="uid://bqptlysubaw3f"]

[ext_resource type="Script" path="res://addons/inventory-system/editor/items/items_editor.gd" id="1_l60ye"]
[ext_resource type="PackedScene" uid="uid://d0ykb6vojc7ga" path="res://addons/inventory-system/editor/items/inventory_item_list.tscn" id="2_wg0v2"]
[ext_resource type="PackedScene" uid="uid://culd2hhy6nu6d" path="res://addons/inventory-system/editor/items/item_editor.tscn" id="3_36ca2"]

[node name="Items" type="Control"]
layout_mode = 3
anchors_preset = 0
mouse_filter = 1
script = ExtResource("1_l60ye")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
split_offset = -128

[node name="InventoryItemList" parent="HSplitContainer" instance=ExtResource("2_wg0v2")]
layout_mode = 2

[node name="ItemsPopupMenu" type="PopupMenu" parent="HSplitContainer/InventoryItemList"]
size = Vector2i(100, 24)

[node name="ItemRemoveConfirmationDialog" type="ConfirmationDialog" parent="HSplitContainer/InventoryItemList"]
unique_name_in_owner = true
size = Vector2i(400, 100)

[node name="ItemEditor" parent="HSplitContainer" instance=ExtResource("3_36ca2")]
layout_mode = 2

[node name="OpenItemDialog" type="FileDialog" parent="."]
title = "Open a File"
size = Vector2i(312, 157)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 2
filters = PackedStringArray("*.tres ; InventoryItem")

[node name="NewItemResourceDialog" type="FileDialog" parent="."]
size = Vector2i(452, 162)
dialog_hide_on_ok = true
access = 2
filters = PackedStringArray("*.tres ; InventoryItem")

[connection signal="theme_changed" from="." to="." method="_on_theme_changed"]
[connection signal="item_popup_menu_requested" from="HSplitContainer/InventoryItemList" to="." method="_on_inventory_item_list_item_popup_menu_requested"]
[connection signal="item_selected" from="HSplitContainer/InventoryItemList" to="." method="_on_inventory_item_list_item_selected"]
[connection signal="about_to_popup" from="HSplitContainer/InventoryItemList/ItemsPopupMenu" to="." method="_on_items_popup_menu_about_to_popup"]
[connection signal="id_pressed" from="HSplitContainer/InventoryItemList/ItemsPopupMenu" to="." method="_on_items_popup_menu_id_pressed"]
[connection signal="confirmed" from="HSplitContainer/InventoryItemList/ItemRemoveConfirmationDialog" to="." method="_on_item_remove_confirmation_dialog_confirmed"]
[connection signal="changed" from="HSplitContainer/ItemEditor" to="." method="_on_item_editor_changed"]
[connection signal="file_selected" from="NewItemResourceDialog" to="." method="_on_new_item_resource_dialog_file_selected"]
